--- a/Nelsonfox/hello_android/res/values/strings.xml
+++ b/Nelsonfox/hello_android/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="app_name">hello_android</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+<string-array name="citys">
+    <item >上海</item>
+    <item >北京</item>
+    <item >大连</item>
+    <item >广州</item>
+    <item >深圳</item>
+    <item >洛杉矶</item>
+</string-array>
 </resources>
